@@ -1,0 +1,6 @@
+EXTRA_DIST =                           \
+	valid-1.xml                    \
+	valid-2.xml                    \
+	valid-3.xml                    \
+	invalid-1.xml
+	
